--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.2",
     "@hookform/resolvers": "^2.8.8",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.10",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-font": "~10.1.0",
@@ -21,8 +24,12 @@
     "react-hook-form": "^7.31.1",
     "react-is": "^18.1.0",
     "react-native": "0.68.1",
+    "react-native-gesture-handler": "^2.4.2",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.7",
     "styled-components": "^5.3.5",
     "yup": "^0.32.11"
@@ -30,7 +37,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.67.6",
+    "@types/react-native": "^0.67.7",
     "@types/styled-components-react-native": "^5.1.3",
     "typescript": "~4.3.5"
   },
